# group2

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE.md  README.md  imgui.ini  launch.vs.json
.githooks/: pre-push
.github/workflows/: ci.yml  deploy.yml
cmake/: CompilerWarnings.cmake  Doxygen.cmake  EmbedShaders.cmake  Sanitizers.cmake  Ultralight.cmake
cmake/toolchains/: msvc.cmake
docs/: TMS_Feature_Reference_QuakeUnits.md  assets.md  ecs.md  graphics-plan.md  graphics.md  networking.md  particles.md  physics-plan.md  physics.md  shaders.md  titanfall-movement-design.md
docs/superpowers/plans/: 2026-04-05-imgui-ultralight-entt.md  2026-04-06-ide-integration.md
docs/superpowers/specs/: 2026-04-05-imgui-ultralight-entt-design.md
scripts/: setup-archlinux.sh  setup-linux.sh  setup-macos.sh  setup-windows.ps1
shaders/: bloom_downsample.comp  bloom_downsample.frag  bloom_upsample.comp  brdf_lut.comp  decal.frag  decal.vert  fullscreen.vert  geometry.frag  geometry.vert  gtao.comp  gtao_blur.comp  hitscan_beam.frag  hitscan_beam.vert  irradiance.comp  lightning_arc.frag  lightning_arc.vert  model.frag  model.vert  motion_vectors.comp  normal.frag  oit_resolve.frag  particle_billboard.frag  particle_billboard.vert  pbr.frag  pbr.vert  pbr_wboit.frag  prefilter.comp  projective.vert  ribbon.frag  ribbon.vert  sdf_text.frag  sdf_text.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  smoke.frag  smoke.vert  ssao.comp  ssao_blur.comp  (+9 more)
shaders/ultralight/: composite.frag  composite.vert  fill.frag  fill.vert  fill_path.frag  fill_path.vert
src/: main.cpp  main.h
src/client/animation/: SkinnedModel.cpp  SkinnedModel.hpp
src/client/debug/: DebugUI.cpp  DebugUI.hpp  FrameRecorder.cpp  FrameRecorder.hpp
src/client/game/: Game.cpp  Game.hpp
src/client/main/: main.cpp
src/client/network/: Client.cpp  Client.hpp
src/client/particles/: GpuParticleBuffer.cpp  GpuParticleBuffer.hpp  ParticleEvents.hpp  ParticlePool.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ParticleTypes.hpp
src/client/particles/effects/: BulletHoleDecal.cpp  BulletHoleDecal.hpp  ExplosionEffect.cpp  ExplosionEffect.hpp  HitscanEffect.cpp  HitscanEffect.hpp  ImpactEffect.cpp  ImpactEffect.hpp  RibbonTrail.cpp  RibbonTrail.hpp  SmokeEffect.cpp  SmokeEffect.hpp  TracerEffect.cpp  TracerEffect.hpp
src/client/particles/sdf/: SdfAtlas.cpp  SdfAtlas.hpp  SdfFont.hpp  SdfRenderer.cpp  SdfRenderer.hpp
src/client/renderer/: Camera.cpp  Camera.hpp  ModelLoader.cpp  ModelLoader.hpp  Renderer.cpp  Renderer.hpp  ShaderUtils.cpp  ShaderUtils.hpp
src/client/systems/: InputSampleSystem.hpp  InputSendSystem.hpp  PredictionSystem.hpp  ReconciliationSystem.hpp
src/ecs/: Registry.hpp
src/ecs/components/: ClientId.hpp  CollisionShape.hpp  InputSnapshot.hpp  LocalPlayer.hpp  ParticleEmitterTag.hpp  PlayerState.hpp  Position.hpp  PreviousPosition.hpp  Projectile.hpp  Renderable.hpp  RibbonEmitter.hpp  TracerEmitter.hpp  Velocity.hpp  WeaponState.hpp
src/ecs/physics/: Movement.cpp  Movement.hpp  PhysicsConstants.hpp  SweptCollision.cpp  SweptCollision.hpp  TitanfallConstants.hpp  WallDetection.cpp  WallDetection.hpp  WorldData.hpp
src/ecs/registry/: Registry.hpp
src/ecs/systems/: CollisionSystem.cpp  CollisionSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  Systems.hpp
src/game/: Game.cpp  Game.hpp  Player.hpp  Weapons.cpp
src/net/: Client.cpp  Client.hpp  NetChannel.cpp  Server.cpp  Server.hpp  server_main.cpp
src/network/: InputPacket.hpp  MessageStream.cpp  MessageStream.hpp  Server.cpp  Server.hpp
src/renderer/: HUD.cpp  IRenderer.hpp  MeshGen.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Renderer.cpp  Renderer.hpp  SDLGPURenderer.cpp  SDLGPURenderer.hpp  renderer.cpp  renderer.h
src/server/: GameServer.cpp  GameServer.hpp  LagComp.hpp  Server.cpp  Server.hpp  server_main.cpp
src/server/game/: ServerGame.cpp  ServerGame.hpp
src/server/main/: main.cpp
src/server/network/: Server.cpp  Server.hpp
src/server/systems/: BroadcastSystem.hpp  EventQueue.cpp  EventQueue.hpp  InputReceiveSystem.hpp
src/ui/: imgui_layer.cpp  imgui_layer.hpp  sdl3gpu_driver.cpp  sdl3gpu_driver.hpp  ultralight_layer.cpp  ultralight_layer.hpp
website/: index.html  reports.html  script.js  spec.html  styles.css
